SERVER-71913 Fix nullptr dereference in CollectionImpl::initFromExisting()